# iotcore

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
iotcore/: __init__.py  iotcore.pyi  mqtt.py
src/: core.rs  lib.rs
