[build-system]
requires = ["maturin>=1.11.5"]
build-backend = "maturin"

[project]
name = "iotcore"
version = "3.0.4"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
